--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <p>Estes sãos os meus clientes que já confiam nos meus serviços! Fale com eles e tire todas suas dúvidas sobre minhas competências!</p>
                     <div class="clientes">
                         <img src="img/clientes/percurso.png" alt="Percurso logomarca" width="150px">
-                        <img src="img/clientes/petkta.svg" alt="PetKta logomarca" width="150px">
+                        <img src="img/clientes/petkta.png" alt="PetKta logomarca" width="150px">
                         <img src="img/clientes/ram.png" alt="RAM Soluções logomarca" width="150px">
                         <img src="img/clientes/podium.png" alt="Grupo Podium logomarca" width="100px">
                     </div>
