--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/aos.css" />
         <script src="//code.jivosite.com/widget.js" data-jv-id="LbMmV797cy" async></script>
         <title>Antony Leme</title>
 
@@ -57,7 +58,7 @@
         <content>
             <section id="servicos">
                 <div class="container">
-                    <article>
+                    <article data-aos="fade-up">
                         <div class="row wrapper">
                             <div class="articleImagem col-12 col-md-4 text-center mt-auto mb-auto">
                                 <img src="svg/undraw_experience_design_eq3j.svg" alt="Sites institucionais e portfóilios" class="img-fluid">
@@ -71,7 +72,7 @@
                         </div>
                     </article>
 
-                    <article>
+                    <article data-aos="fade-up">
                         <div class="row wrapper">
                             <div class="articleTextos col-12 col-md-8 mt-auto mb-auto">
                                 <h1>Lojas virtuais</h1>
@@ -85,7 +86,7 @@
                         </div>
                     </article>
 
-                    <article>
+                    <article data-aos="fade-up">
                         <div class="row wrapper">
                             <div class="articleImagem col-12 col-md-4 text-center mt-auto mb-auto">
                                 <img src="svg/undraw_features_overview_jg7a.svg" alt="Sistemas e serviços web" class="img-fluid">
@@ -438,6 +439,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="js/app.js"></script>
+        <script src="js/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
         <!-- Hotjar Tracking Code for https://antonyleme.com.br/ -->
         <script>
         (function(h,o,t,j,a,r){
