--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="img/portfolio/percurso/index.png" class="d-block w-100" alt="Página principal do Percurso.">
+                                        <img src="img/portfolio/percurso/index-min.png" class="d-block w-100" alt="Página principal do Percurso.">
                                         <div class="carousel-caption d-none d-md-block">
                                             <h5>Página principal do Percurso</h5>
                                             <p>Contém todos os conteúdos do site em uma única página.</p>
@@ -255,7 +255,7 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="img/portfolio/petkta/index.png" class="d-block w-100" alt="Página principal da PetKta.">
+                                        <img src="img/portfolio/petkta/index-min.png" class="d-block w-100" alt="Página principal da PetKta.">
                                         <div class="carousel-caption d-none d-md-block">
                                             <h5>Página one page do site</h5>
                                             <p>Contém todos os conteúdos do site em uma única page seguindo o modelo "one page".</p>
@@ -297,7 +297,7 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="img/portfolio/ram/INDEX.png" class="d-block w-100" alt="Página contendo anúncios e celulares para venda.">
+                                        <img src="img/portfolio/ram/INDEX-min.png" class="d-block w-100" alt="Página contendo anúncios e celulares para venda.">
                                         <div class="carousel-caption d-none d-md-block">
                                             <h5>Tela inicial do site</h5>
                                             <p>Página contendo anúncios e celulares para venda.</p>
@@ -338,7 +338,7 @@
                                     </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item">
-                                            <img src="img/portfolio/podium/aluno1.png" class="d-block w-100" alt="...">
+                                            <img src="img/portfolio/podium/aluno1-min.png" class="d-block w-100" alt="...">
                                             <div class="carousel-caption d-none d-md-block">
                                                 <h5>Tela inicial do aluno</h5>
                                                 <p>Tela inicial do aluno com os seus cursos matriculados.</p>
